[package]
name = "scrambler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
unicode-segmentation = "1"
rand = "0.8"
itertools = "0.10"